@@ -38,11 +38,13 @@ exportMethods(sampleData, "sampleData<-",
               alleleFrequency,
               missingGenotypeRate,
               heterozygosity,
+              hethom,
               homozygosity,
+              meanBySample,
+              countSingletons,
               pca,
               hwe,
               inbreedCoeff,
-              meanBySample,
               mendelErr,
               duplicateDiscordance,
               alternateAlleleDetection,
